--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node mail-report.js"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "express": "^4.18.2",
     "nodemailer": "^6.9.8"
   }
